upd8 writing (pretest)

--- a/views/student/pretest/4_Operators_and_Expressions-pretest.ejs
+++ b/views/student/pretest/4_Operators_and_Expressions-pretest.ejs
@@ -515,21 +515,22 @@
                      <br>
 
                 <!-- ข้อ 16 -->
-                <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #363e62;">
-                    16.1 (Deployment) ให้เขียนโปรแกรมรับค่าของตัวแปรและแสดงค่าของข้อมูลดังนี้ (3 คะแนน)
-                <br></p>
-                <div class="group2"  style="margin: 20px;">
-                    <iframe src="<%= ADRI1  %> " width="90%" height="600" allow="autoplay"></iframe>
-                    <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="600px"></iframe>  
-                </div>    
-                <div class="form-group">
-                    <textarea class="form-control"  placeholder="วางโค้ดที่นี่" rows="10" cols="30" name="code" required></textarea>
+                <div style="background-color: #363e62;">
+                    <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #363e62;">
+                        16.1 (Deployment) ให้เขียนโปรแกรมรับค่าของตัวแปรและแสดงค่าของข้อมูลดังนี้ (3 คะแนน)
+                    <br></p>
+                    <div class="group2"  style="margin: 20px;">
+                        <iframe src="<%= ADRI1  %> " width="90%" height="600" allow="autoplay"></iframe>
+                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="600px"></iframe>  
+                    </div>    
+                    <div class="form-group">
+                        <textarea class="form-control"  placeholder="วางโค้ดที่นี่" rows="10" cols="30" name="code" required></textarea>
+                    </div>
                 </div>
-                
                 
                 <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #363e62;">
                     16.2 (Result) แสดงผลลัพธ์ที่ได้ ของข้อที่ 16.1 (1 คะแนน)</p>
-                    <textarea class="form-control" placeholder="คำตอบ" style="height: 100px;" rows="4" cols="30" name="expResult16" required></textarea>
+                    <textarea class="form-control" placeholder="คำตอบ"rows="4" cols="30" name="expResult16" required></textarea>
                 <br>
                 <p type="text" class="list-group-item list-group-item-action"  style="color: white; background-color: #363e62;">
                     16.3 (Improvement) ถ้าต้องการให้ผลลัพธ์ของ a และ b มีค่าเท่ากับ 10 จะเขียนโค้ดเพิ่มอย่างไร ให้ใช้ Unary Operators คือ ++ หรือ -- (1 คะแนน)
@@ -541,21 +542,22 @@
                 <br><br>
 
                 <!-- ข้อ 17 -->
-                <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #8c521f;">
-                    17.1 (Deployment) ให้เขียนโปรแกรมรับค่าของตัวแปรและแสดงค่าของข้อมูลดังนี้ (3 คะแนน)
-                <br></p>
-                <div class="group2" style="margin: 20px;">
-                    <iframe src="<%= ADRI2  %>" width="90%" height="600" allow="autoplay"></iframe>                
-                    <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="600px"></iframe>  
+                <div style="background-color: #8c521f;">
+                    <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #8c521f;">
+                        17.1 (Deployment) ให้เขียนโปรแกรมรับค่าของตัวแปรและแสดงค่าของข้อมูลดังนี้ (3 คะแนน)
+                    <br></p>
+                    <div class="group2" style="margin: 20px;">
+                        <iframe src="<%= ADRI2  %>" width="90%" height="600" allow="autoplay"></iframe>                
+                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="600px"></iframe>  
+                    </div>
+                    <div class="form-group">
+                        <textarea class="form-control"  placeholder="วางโค้ดที่นี่" rows="10" cols="30" name="sendLink171" required></textarea>
+                    </div>
                 </div>
-                <div class="form-group">
-                    <textarea class="form-control" style="height: 400px;" placeholder="วางโค้ดที่นี่" rows="4" cols="30" name="sendLink171" required></textarea>
-                </div>
-                
 
                 <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #8c521f;">
                     17.2 (Result) แสดงผลลัพธ์ที่ได้ ของข้อที่ 17.1 (1 คะแนน)</p>
-                    <textarea class="form-control" placeholder="คำตอบ" style="height: 100px;" rows="4" cols="30" name="expResult17" required></textarea>
+                    <textarea class="form-control" placeholder="คำตอบ"  rows="4" cols="30" name="expResult17" required></textarea>
                 <br>
                 <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #8c521f;">
                     17.3 (Improvement) ถ้าต้องการแสดงค่า x, y, z, n ของการคำนวณสมการ x = y * 2 - 1 / z % 3 + n จะต้องแก้ไขโค้ดอย่างไร กำหนดให้ใส่ค่า x = 10, y = 20, z = 30 และ n = 40 (1 คะแนน) <br>
@@ -567,20 +569,22 @@
                 <br><br>
 
                 <!-- ข้อ 18 -->
-                <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #366241;">
-                    18.1 (Deployment) ให้เขียนโปรแกรมรับค่าของตัวแปรและแสดงผลลัพธ์ของสมการ a + b^(2n) - (4c - 5) สำหรับการยกกำลังให้ใช้ Library math.h (3 คะแนน)<br>
-                </p>
-                <div class="group2 style="margin: 20px;">
-                    <iframe src="<%= ADRI3  %>" width="90%" height="600" allow="autoplay"></iframe>
-                    <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="600px"></iframe>  
-                </div>
-                    <div class="form-group">
-                    <textarea class="form-control" style="height: 400px;" placeholder="วางโค้ดที่นี่" rows="4" cols="30" name="sendLink181" required></textarea>
+                <div style="background-color: #366241;">
+                    <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #366241;">
+                        18.1 (Deployment) ให้เขียนโปรแกรมรับค่าของตัวแปรและแสดงผลลัพธ์ของสมการ a + b^(2n) - (4c - 5) สำหรับการยกกำลังให้ใช้ Library math.h (3 คะแนน)<br>
+                    </p>
+                    <div class="group2" style="margin: 20px;">
+                        <iframe src="<%= ADRI3  %>" width="90%" height="600" allow="autoplay"></iframe>
+                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="600px"></iframe>  
+                    </div>
+                        <div class="form-group">
+                        <textarea class="form-control"  placeholder="วางโค้ดที่นี่" rows="10" cols="30" name="sendLink181" required></textarea>
+                    </div>
                 </div>
 
                 <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #366241;">
                     18.2 (Result) แสดงผลลัพธ์ที่ได้ ของข้อที่ 18.1 (1 คะแนน)</p>
-                    <textarea class="form-control" placeholder="คำตอบ" style="height: 100px;" rows="4" cols="30" name="expResult18" required></textarea>
+                    <textarea class="form-control" placeholder="คำตอบ"  rows="4" cols="30" name="expResult18" required></textarea>
                 <br>
                 <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #366241;">
                     18.3 (Improvement) ให้เขียนโปรแกรมรับค่าตัวแปร a, b, c จาก Keyboard เพื่อหาค่า x ของสมการดังนี้ (1 คะแนน) <br>
@@ -595,20 +599,22 @@
                 <br><br>
 
                 <!-- ข้อ 19 -->
-                <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #453662;">
-                    19.1 (Deployment) ให้เขียนโปรแกรมรับค่าของตัวแปรและแสดงค่าของข้อมูลดังนี้ (3 คะแนน)<br>
-                </p>
-                <div class="group2" style="margin: 20px;">
-                    <iframe src="<%= ADRI4  %>" width="90%" height="600" allow="autoplay"></iframe>
-                    <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="600px"></iframe>  
-                </div>    
-                <div class="form-group">
-                    <textarea class="form-control" style="height: 400px;" placeholder="วางโค้ดที่นี่" rows="4" cols="30" name="sendLink191" required></textarea>
+                <div style="background-color: #453662;">
+                    <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #453662;">
+                        19.1 (Deployment) ให้เขียนโปรแกรมรับค่าของตัวแปรและแสดงค่าของข้อมูลดังนี้ (3 คะแนน)<br>
+                    </p>
+                    <div class="group2" style="margin: 20px;">
+                        <iframe src="<%= ADRI4  %>" width="90%" height="600" allow="autoplay"></iframe>
+                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="600px"></iframe>  
+                    </div>    
+                    <div class="form-group">
+                        <textarea class="form-control"  placeholder="วางโค้ดที่นี่" rows="10" cols="30" name="sendLink191" required></textarea>
+                    </div>
                 </div>
 
                 <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #453662;">
                     19.2 (Result) แสดงผลลัพธ์ที่ได้ ของข้อที่ 19.1 (1 คะแนน)</p>
-                    <textarea class="form-control" placeholder="คำตอบ" style="height: 100px;" rows="4" cols="30" name="expResult19" required></textarea>
+                    <textarea class="form-control" placeholder="คำตอบ"  rows="4" cols="30" name="expResult19" required></textarea>
                 <br>
                 <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #453662;">
                     19.3 (Improvement) ถ้าต้องการให้ค่าผลลัพธ์ของ a > b && b < c เป็น 0 (เป็นเท็จ) และของ a == 10 || c == 20 เป็น 1 (เป็นจริง) จะต้องแก้ Operators ของทั้ง 2 คำสั่งอย่างไร <br> โดยกำหนดให้ a = 20, b = 8, c = 43 เหมือนเดิม (1 คะแนน) <br>
@@ -620,20 +626,22 @@
                 <br><br>
 
                 <!-- ข้อ 20 -->
-                <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #687521;">
-                    20.1 (Deployment) ให้เขียนโปรแกรม Point of Sale คำนวณราคาสินค้าพร้อมส่วนลด โดยให้รับค่าของตัวแปรและแสดงค่าของข้อมูลดังนี้ (3 คะแนน) <br>
-                </p>
-                <div class="group2" style="margin: 20px;">
-                    <iframe src="<%= ADRI5  %>" width="90%" height="600" allow="autoplay"></iframe> 
-                    <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="600px"></iframe>  
-                </div>
-                <div class="form-group">
-                    <textarea class="form-control" style="height: 400px;" placeholder="วางโค้ดที่นี่" rows="4" cols="30" name="sendLink201" required></textarea>
+                <div style="background-color: #687521;">
+                    <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #687521;">
+                        20.1 (Deployment) ให้เขียนโปรแกรม Point of Sale คำนวณราคาสินค้าพร้อมส่วนลด โดยให้รับค่าของตัวแปรและแสดงค่าของข้อมูลดังนี้ (3 คะแนน) <br>
+                    </p>
+                    <div class="group2" style="margin: 20px;">
+                        <iframe src="<%= ADRI5  %>" width="90%" height="600" allow="autoplay"></iframe> 
+                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="600px"></iframe>  
+                    </div>
+                    <div class="form-group">
+                        <textarea class="form-control"  placeholder="วางโค้ดที่นี่" rows="10" cols="30" name="sendLink201" required></textarea>
+                    </div>
                 </div>
 
                 <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #687521;">
                     20.2 (Result) แสดงผลลัพธ์ที่ได้ ของข้อที่ 20.1 (1 คะแนน)</p>
-                    <textarea class="form-control" placeholder="คำตอบ" style="height: 100px;" rows="4" cols="30" name="expResult20" required></textarea>
+                    <textarea class="form-control" placeholder="คำตอบ"  rows="4" cols="30" name="expResult20" required></textarea>
                 <br>
                 <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #687521;">
                     20.3 (Improvement) ถ้าต้องการเพิ่มสินค้าที่ 4 และในการแสดงใบเสร็จให้แสดง ชื่อ นาสกุล ของลูกค้า โดยให้รับค่าข้อมูลทาง Keyboard จะเขียนโปรแกรมอย่างไร <br> สามารถกำหนดข้อมูลได้เอง (1 คะแนน) <br>
