--- a/views/student/pretest/7_Arrays_and_Strings-pretest.ejs
+++ b/views/student/pretest/7_Arrays_and_Strings-pretest.ejs
@@ -538,22 +538,23 @@
                      <br>
 
                 <!-- ข้อ 16 -->
-                <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #363e62;">
-                    16.1 (Deployment) ให้เขียนโปรแกรมกำหนดและแสดงข้อข้อมูลด้วยการใช้ Array 1 มิติ ดังนี้ (3 คะแนน)
-                    <br></p>
-                <div class="group2"  style="margin: 20px;">
-                    <iframe src="<%= ADRI1  %> " width="90%" height="600" allow="autoplay"></iframe>
-                    <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="600px"></iframe>  
-                </div>    
-                <div class="form-group">
-                    <textarea class="form-control"  placeholder="วางโค้ดที่นี่" rows="10" cols="30" name="code" required></textarea>
+                <div style="background-color: #363e62;">
+                    <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #363e62;">
+                        16.1 (Deployment) ให้เขียนโปรแกรมกำหนดและแสดงข้อข้อมูลด้วยการใช้ Array 1 มิติ ดังนี้ (3 คะแนน)
+                        <br></p>
+                    <div class="group2"  style="margin: 20px;">
+                        <iframe src="<%= ADRI1  %> " width="90%" height="600" allow="autoplay"></iframe>
+                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="600px"></iframe>  
+                    </div>    
+                    <div class="form-group">
+                        <textarea class="form-control"  placeholder="วางโค้ดที่นี่" rows="10" cols="30" name="code" required></textarea>
+                    </div>
                 </div>
-                
                 
                 <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #363e62;">
                     16.2 (Result) แสดงผลลัพธ์ที่ได้ของข้อที่ 16.1 (1 คะแนน)
                 </p>
-                    <textarea class="form-control" placeholder="คำตอบ" style="height: 100px;" rows="4" cols="30" name="expResult16" required></textarea>
+                    <textarea class="form-control" placeholder="คำตอบ" rows="4" cols="30" name="expResult16" required></textarea>
                 <br>
                 <p type="text" class="list-group-item list-group-item-action"  style="color: white; background-color: #363e62;">
                     16.3 (Improvement) ถ้าต้องการเก็บข้อมูลและแสดงข้อมูลจำนวน 20 ค่า พร้อมทั้งแสดงข้อมูลตำแหน่ง Index ที่ 18 ต้องแก้ไขโปรแกรมอย่างไร (1 คะแนน)
@@ -565,22 +566,23 @@
                 <br><br>
 
                 <!-- ข้อ 17 -->
-                <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #8c521f;">
-                    17.1 (Deployment) ให้เขียนโปรแกรมกำหนดและแสดงข้อข้อมูลด้วยการใช้ Array 2 มิติ ดังนี้ (3 คะแนน)
-                    <br></p>
-                <div class="group2" style="margin: 20px;">
-                    <iframe src="<%= ADRI2  %>" width="90%" height="600" allow="autoplay"></iframe>                
-                    <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="600px"></iframe>  
+                <div style="background-color: #8c521f;">
+                    <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #8c521f;">
+                        17.1 (Deployment) ให้เขียนโปรแกรมกำหนดและแสดงข้อข้อมูลด้วยการใช้ Array 2 มิติ ดังนี้ (3 คะแนน)
+                        <br></p>
+                    <div class="group2" style="margin: 20px;">
+                        <iframe src="<%= ADRI2  %>" width="90%" height="600" allow="autoplay"></iframe>                
+                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="600px"></iframe>  
+                    </div>
+                    <div class="form-group">
+                        <textarea class="form-control"  placeholder="วางโค้ดที่นี่" rows="10" cols="30" name="sendLink171" required></textarea>
+                    </div>
                 </div>
-                <div class="form-group">
-                    <textarea class="form-control" style="height: 400px;" placeholder="วางโค้ดที่นี่" rows="4" cols="30" name="sendLink171" required></textarea>
-                </div>
-                
 
                 <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #8c521f;">
                     17.2 (Result) แสดงผลลัพธ์ที่ได้ของข้อที่ 17.1 (1 คะแนน)
                 </p>
-                    <textarea class="form-control" placeholder="คำตอบ" style="height: 100px;" rows="4" cols="30" name="expResult17" required></textarea>
+                    <textarea class="form-control" placeholder="คำตอบ" rows="4" cols="30" name="expResult17" required></textarea>
                 <br>
                 <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #8c521f;">
                     17.3 (Improvement) ถ้าต้องการเก็บข้อมูล Matrix ขนาด 3 x 3 พร้อมทั้งแสดงข้อมูลตำแหน่ง [2][2] ต้องแก้ไขโปรแกรมอย่างไร และได้ค่าข้อมูลใด โดยให้โปรแกรมสามารถรับค่าจากผู้ใช้ได้ (1 คะแนน)
@@ -592,22 +594,24 @@
                 <br><br>
 
                 <!-- ข้อ 18 -->
-                <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #366241;">
-                    18.1 (Deployment) ให้เขียนโปรแกรมกำหนดและแสดงข้อข้อมูลด้วยการใช้ Array 3 มิติ ขนาด 3 x 3 x 3 ดังนี้ (3 คะแนน)
-                    <br>
-                </p>
-                <div class="group2 style="margin: 20px;">
-                    <iframe src="<%= ADRI3  %>" width="90%" height="600" allow="autoplay"></iframe>
-                    <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="600px"></iframe>  
-                </div>
-                    <div class="form-group">
-                    <textarea class="form-control" style="height: 400px;" placeholder="วางโค้ดที่นี่" rows="4" cols="30" name="sendLink181" required></textarea>
+                <div style="background-color: #366241;">
+                    <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #366241;">
+                        18.1 (Deployment) ให้เขียนโปรแกรมกำหนดและแสดงข้อข้อมูลด้วยการใช้ Array 3 มิติ ขนาด 3 x 3 x 3 ดังนี้ (3 คะแนน)
+                        <br>
+                    </p>
+                    <div class="group2" style="margin: 20px;">
+                        <iframe src="<%= ADRI3  %>" width="90%" height="600" allow="autoplay"></iframe>
+                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="600px"></iframe>  
+                    </div>
+                        <div class="form-group">
+                        <textarea class="form-control" placeholder="วางโค้ดที่นี่" rows="10" cols="30" name="sendLink181" required></textarea>
+                    </div>
                 </div>
 
                 <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #366241;">
                     18.2 (Result) แสดงผลลัพธ์ที่ได้ของข้อที่ 18.1 (1 คะแนน)
                 </p>
-                    <textarea class="form-control" placeholder="คำตอบ" style="height: 100px;" rows="4" cols="30" name="expResult18" required></textarea>
+                    <textarea class="form-control" placeholder="คำตอบ" rows="4" cols="30" name="expResult18" required></textarea>
                 <br>
                 <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #366241;">
                     18.3 (Improvement) ถ้าต้องการเก็บข้อมูล Matrix ขนาด 3 x 3 x 3 พร้อมทั้งแสดงข้อมูลตำแหน่ง [2][2][2] โดยให้โปรแกรมสามารถรับค่าจากผู้ใช้ได้ (1 คะแนน)
@@ -620,21 +624,23 @@
                 <br><br>
 
                 <!-- ข้อ 19 -->
-                <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #453662;">
-                    19.1 (Deployment) ให้เขียนโปรแกรมตามที่กำหนด โดยใช้ฟังก์ชันต่าง ๆ ของ string.h ดังนี้ (3 คะแนน)
-                </p>
-                <div class="group2" style="margin: 20px;">
-                    <iframe src="<%= ADRI4  %>" width="90%" height="600" allow="autoplay"></iframe>
-                    <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="600px"></iframe>  
-                </div>    
-                <div class="form-group">
-                    <textarea class="form-control" style="height: 400px;" placeholder="วางโค้ดที่นี่" rows="4" cols="30" name="sendLink191" required></textarea>
+                <div style="background-color: #453662;">
+                    <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #453662;">
+                        19.1 (Deployment) ให้เขียนโปรแกรมตามที่กำหนด โดยใช้ฟังก์ชันต่าง ๆ ของ string.h ดังนี้ (3 คะแนน)
+                    </p>
+                    <div class="group2" style="margin: 20px;">
+                        <iframe src="<%= ADRI4  %>" width="90%" height="600" allow="autoplay"></iframe>
+                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="600px"></iframe>  
+                    </div>    
+                    <div class="form-group">
+                        <textarea class="form-control" placeholder="วางโค้ดที่นี่" rows="10" cols="30" name="sendLink191" required></textarea>
+                    </div>
                 </div>
 
                 <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #453662;">
                     19.2 (Result) แสดงผลลัพธ์ที่ได้ของข้อที่ 19.1 (1 คะแนน)
                 </p>
-                    <textarea class="form-control" placeholder="คำตอบ" style="height: 100px;" rows="4" cols="30" name="expResult19" required></textarea>
+                    <textarea class="form-control" placeholder="คำตอบ" rows="4" cols="30" name="expResult19" required></textarea>
                 <br>
                 <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #453662;">
                     19.3 (Improvement) จากโปรแกรมข้างต้นให้เขียนโปรแกรมใหม่ทำการเพิ่มตัวแปรชื่อ name เก็บชื่อ นามสกุล โดยให้รับค่าข้อมูลจาก Keyboard และให้ใช้ฟังก์ชันต่าง ๆ ของ String เพื่อให้แสดงข้อความดังนี้
@@ -650,21 +656,23 @@
                 <br><br>
 
                 <!-- ข้อ 20 -->
-                <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #687521;">
-                    20.1 (Deployment) ให้เขียนโปรแกรมตามที่กำหนด โดยใช้ฟังก์ชันต่าง ๆ ของ string.h ดังนี้ (3 คะแนน)
-                    <br></p>
-                <div class="group2" style="margin: 20px;">
-                    <iframe src="<%= ADRI5  %>" width="90%" height="600" allow="autoplay"></iframe> 
-                    <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="600px"></iframe>  
-                </div>
-                <div class="form-group">
-                    <textarea class="form-control" style="height: 400px;" placeholder="วางโค้ดที่นี่" rows="4" cols="30" name="sendLink201" required></textarea>
+                <div style="background-color: #687521;">
+                    <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #687521;">
+                        20.1 (Deployment) ให้เขียนโปรแกรมตามที่กำหนด โดยใช้ฟังก์ชันต่าง ๆ ของ string.h ดังนี้ (3 คะแนน)
+                        <br></p>
+                    <div class="group2" style="margin: 20px;">
+                        <iframe src="<%= ADRI5  %>" width="90%" height="600" allow="autoplay"></iframe> 
+                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="600px"></iframe>  
+                    </div>
+                    <div class="form-group">
+                        <textarea class="form-control" placeholder="วางโค้ดที่นี่" rows="10" cols="30" name="sendLink201" required></textarea>
+                    </div>
                 </div>
 
                 <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #687521;">
                     20.2 (Result) แสดงผลลัพธ์ที่ได้ของข้อที่ 20.1 (1 คะแนน)
                 </p>
-                    <textarea class="form-control" placeholder="คำตอบ" style="height: 100px;" rows="4" cols="30" name="expResult20" required></textarea>
+                    <textarea class="form-control" placeholder="คำตอบ" rows="4" cols="30" name="expResult20" required></textarea>
                 <br>
                 <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #687521;">
                     20.3 (Improvement) จากโปรแกรมข้างต้นให้เขียนโปรแกรมต่อจากเดิม โดยเมื่อ i มากกว่าเท่ากับ 0 เป็นเท็จ ให้ทำการ Reverse Text ของ inputSpring อีกครั้งเพื่อให้แสดงข้อความกลับเป็นข้อความเดิม หลังจากนั้นให้จบการทำงาน
