--- a/views/student/pretest/3_Input_and_Output-pretest.ejs
+++ b/views/student/pretest/3_Input_and_Output-pretest.ejs
@@ -536,139 +536,133 @@
                      <br>
 
                 <!-- ข้อ 16 -->
-                <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #363e62;">
-                    16.1 (Deployment) ให้เขียนโปรแกรมรับค่าของตัวแปรและแสดงค่าของข้อมูลดังนี้ (3 คะแนน) <br>
-                </p>
-                <div class="group2"  style="margin: 20px;">
-                    <iframe src="<%= ADRI1  %> " width="90%" height="600" allow="autoplay"></iframe>
-                
+                <div style="background-color: #363e62;">
+                    <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #363e62;">
+                        16.1 (Deployment) ให้เขียนโปรแกรมรับค่าของตัวแปรและแสดงค่าของข้อมูลดังนี้ (3 คะแนน) <br>
+                    </p>
+                    <div class="group2"  style="margin: 20px;">
+                        <iframe src="<%= ADRI1  %> " width="90%" height="600" allow="autoplay"></iframe>
+                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="600px"></iframe> 
+                    </div>
                     <div class="form-group">
-                        <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#staticBackdrop2">
-                            ทดสอบโค้ด</button>
-                    <textarea class="form-control" style="height: 400px;" placeholder="วางโค้ดที่นี่" rows="4" cols="30" name="code" required></textarea>
-
-                </div></div>
-                
+                        <textarea class="form-control" placeholder="วางโค้ดที่นี่" rows="10" cols="30" name="code" required></textarea>
+                    </div>
+                </div>
                 <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #363e62;">
                     16.2 (Result) แสดงผลลัพธ์ที่ได้ ของข้อที่ 16.1 (1 คะแนน)</p>
-                    <textarea class="form-control" placeholder="คำตอบ" style="height: 100px;" rows="4" cols="30" name="expResult16" required></textarea>
+                    <textarea class="form-control" placeholder="คำตอบ" rows="4" cols="30" name="expResult16" required></textarea>
                 <br>
                 <p type="text" class="list-group-item list-group-item-action"  style="color: white; background-color: #363e62;">
                     16.3 (Improvement) ถ้าต้องการรับค่าข้อมูลเป็นข้อความเป็นชื่อเล่นของตนเอง ต้องแก้ไขอย่างไร และได้ผลลัพธ์อย่างไร (1 คะแนน) <br>
-                    </p>
-                    <div class="form-group">
-                        <textarea class="form-control" placeholder="คำตอบ" name="sendLink16" type="text" rows="4" required></textarea>
-                            </div>
+                </p>
+                <div class="form-group">
+                    <textarea class="form-control" placeholder="คำตอบ" name="sendLink16" type="text" rows="10" required></textarea>
+                </div>
                 <br><br>
 
                 <!-- ข้อ 17 -->
-                <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #8c521f;">
-                    17.1 (Deployment) ให้เขียนโปรแกรมคำนวณหาปริมาตรทรงกรวย โดยกำหนดให้รับค่าตัวแปร radius และ height (3 คะแนน)<br>
-                </p>
-                <div class="group2" style="margin: 20px;">
-                    <iframe src="<%= ADRI2  %>" width="90%" height="600" allow="autoplay"></iframe>                
-                    
-                <div class="form-group">
-                    <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#staticBackdrop2">
-                        ทดสอบโค้ด</button>
-                    <textarea class="form-control" style="height: 400px;" placeholder="วางโค้ดที่นี่" rows="4" cols="30" name="sendLink171" required></textarea>
-
-                </div></div>
-                
-
+                <div style="background-color: #8c521f;">
+                    <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #8c521f;">
+                        17.1 (Deployment) ให้เขียนโปรแกรมคำนวณหาปริมาตรทรงกรวย โดยกำหนดให้รับค่าตัวแปร radius และ height (3 คะแนน)<br>
+                    </p>
+                    <div class="group2" style="margin: 20px;">
+                        <iframe src="<%= ADRI2  %>" width="90%" height="600" allow="autoplay"></iframe>        
+                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="600px"></iframe>         
+                    </div>    
+                    <div class="form-group">
+                        <textarea class="form-control" placeholder="วางโค้ดที่นี่" rows="10" cols="30" name="sendLink171" required></textarea>
+                    </div>
+                </div>
                 <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #8c521f;">
                     17.2 (Result) แสดงผลลัพธ์ที่ได้ ของข้อที่ 17.1 (1 คะแนน)</p>
-                    <textarea class="form-control" placeholder="คำตอบ" style="height: 100px;" rows="4" cols="30" name="expResult17" required></textarea>
+                    <textarea class="form-control" placeholder="คำตอบ"  rows="4" cols="30" name="expResult17" required></textarea>
                 <br>
                 <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #8c521f;">
                     17.3 (Improvement) ถ้าต้องการหาพื้นที่สามเหลี่ยม โดยกำหนดให้รับค่าตัวแปร Base (ใส่เป็น 8.3) และ Height (ใส่เป็น 10.9) และได้ผลลัพธ์เท่าไร (1 คะแนน) <br>
                     (พร้อมเขียนอธิบายสิ่งที่แก้ไข) <br>
                     </p>
                     <div class="form-group">
-                        <textarea class="form-control"  placeholder="คำตอบ" name="sendLink172" type="text" rows="4" required></textarea>
+                        <textarea class="form-control"  placeholder="คำตอบ" name="sendLink172" type="text" rows="10" required></textarea>
                     </div>
                 <br><br>
 
                 <!-- ข้อ 18 -->
-                <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #366241;">
-                    18.1 (Deployment) ให้เขียนโปรแกรมแปลงอุณหภูมิ Celsius (C) เป็น Fahrenheit (F) โดยให้รับค่าตัวแปร C (3 คะแนน)<br>
-                </p>
-                <div class="group2 style="margin: 20px;">
-                    <iframe src="<%= ADRI3  %>" width="90%" height="600" allow="autoplay"></iframe>
-                
-                <div class="form-group">
-                    <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#staticBackdrop2">
-                        ทดสอบโค้ด</button>
-                    <textarea class="form-control" style="height: 400px;" placeholder="วางโค้ดที่นี่" rows="4" cols="30" name="sendLink181" required></textarea>
-
-                </div></div>
-
+                <div style="background-color: #366241;">
+                    <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #366241;">
+                        18.1 (Deployment) ให้เขียนโปรแกรมแปลงอุณหภูมิ Celsius (C) เป็น Fahrenheit (F) โดยให้รับค่าตัวแปร C (3 คะแนน)<br>
+                    </p>
+                    <div class="group2 style="margin: 20px;">
+                        <iframe src="<%= ADRI3  %>" width="90%" height="600" allow="autoplay"></iframe>
+                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="600px"></iframe> 
+                    </div>
+                    <div class="form-group">
+                        <textarea class="form-control" placeholder="วางโค้ดที่นี่" rows="10" cols="30" name="sendLink181" required></textarea>
+                    </div>
+                </div>
                 <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #366241;">
                     18.2 (Result) แสดงผลลัพธ์ที่ได้ ของข้อที่ 18.1 (1 คะแนน)</p>
-                    <textarea class="form-control" placeholder="คำตอบ" style="height: 100px;" rows="4" cols="30" name="expResult18" required></textarea>
+                    <textarea class="form-control" placeholder="คำตอบ"  rows="4" cols="30" name="expResult18" required></textarea>
                 <br>
                 <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #366241;">
                     18.3 (Improvement) ถ้าต้องการให้แปลงอุณหภูมิ Fahrenheit (F) เป็น Celsius (C) จะต้องเขียนโปรแกรมโดยให้รับค่าตัวแปร F (ใส่ค่าเป็น 93) และได้ผลลัพธ์เท่าไร (1 คะแนน) <br>
                     (พร้อมเขียนอธิบายสิ่งที่แก้ไข) <br>
-                    </p>
-                    <div class="form-group">
-                        <textarea class="form-control"  placeholder="คำตอบ" rows="4" cols="30" name="sendLink182" required></textarea>
-    
-                        </div>
+                </p>
+                <div class="form-group">
+                    <textarea class="form-control"  placeholder="คำตอบ" rows="10" cols="30" name="sendLink182" required></textarea>
+                </div>
                 <br><br>
 
                 <!-- ข้อ 19 -->
-                <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #453662;">
-                    19.1 (Deployment) ให้เขียนโปรแกรมคำนวณยอดขายสินค้ารวมภาษี โดยให้รับค่าตัวแปร และให้ใส่ค่าของตัวแปรดังนี้ ภาษี VAT = 7% ราคาสินค้า A = 400, B = 600, C = 800 (3 คะแนน)<br>
-                </p>
-                <div class="group2" style="margin: 20px;">
-                    <iframe src="<%= ADRI4  %>" width="90%" height="600" allow="autoplay"></iframe>
-                
-                <div class="form-group">
-                    <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#staticBackdrop2">
-                        ทดสอบโค้ด</button>
-                    <textarea class="form-control" style="height: 400px;" placeholder="วางโค้ดที่นี่" rows="4" cols="30" name="sendLink191" required></textarea>
-
-                </div></div>
-
+                <div style="background-color: #453662;">
+                    <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #453662;">
+                        19.1 (Deployment) ให้เขียนโปรแกรมคำนวณยอดขายสินค้ารวมภาษี โดยให้รับค่าตัวแปร และให้ใส่ค่าของตัวแปรดังนี้ ภาษี VAT = 7% ราคาสินค้า A = 400, B = 600, C = 800 (3 คะแนน)<br>
+                    </p>
+                    <div class="group2" style="margin: 20px;">
+                        <iframe src="<%= ADRI4  %>" width="90%" height="600" allow="autoplay"></iframe>
+                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="600px"></iframe> 
+                    </div>
+                    <div class="form-group">
+                        <textarea class="form-control" placeholder="วางโค้ดที่นี่" rows="10" cols="30" name="sendLink191" required></textarea>
+                    </div>  
+                </div>
                 <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #453662;">
                     19.2 (Result) แสดงผลลัพธ์ที่ได้ ของข้อที่ 19.1 (1 คะแนน)</p>
-                    <textarea class="form-control" placeholder="คำตอบ" style="height: 100px;" rows="4" cols="30" name="expResult19" required></textarea>
+                    <textarea class="form-control" placeholder="คำตอบ" rows="4" cols="30" name="expResult19" required></textarea>
                 <br>
                 <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #453662;">
                     19.3 (Improvement) ถ้าต้องการรับค่าตัวแปรและใส่ค่าของตัวแปร ดังนี้ สินค้า D = 1000 และ E = 2000 จะต้องแก้ไขส่วนใดบ้าง และได้ผลลัพธ์เท่าไร (1 คะแนน) <br>
                     (พร้อมเขียนอธิบายสิ่งที่แก้ไข) <br>
                     </p>
                     <div class="form-group">
-                        <textarea class="form-control" placeholder="คำตอบ" rows="4" cols="30" name="sendLink192" required></textarea>
+                        <textarea class="form-control" placeholder="คำตอบ" rows="10" cols="30" name="sendLink192" required></textarea>
     
                         </div>
                 <br><br>
 
                 <!-- ข้อ 20 -->
-                <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #687521;">
-                    20.1 (Deployment) ให้เขียนโปรแกรมแสดงประวัติของผู้เรียน โดยให้รับค่าตัวแปร nickname, age, address (3 คะแนน)<br>
-                </p>
-                <div class="group2" style="margin: 20px;">
-                    <iframe src="<%= ADRI5  %>" width="90%" height="600" allow="autoplay"></iframe> 
-                    
+                <div style="background-color: #687521;">
+                    <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #687521;">
+                        20.1 (Deployment) ให้เขียนโปรแกรมแสดงประวัติของผู้เรียน โดยให้รับค่าตัวแปร nickname, age, address (3 คะแนน)<br>
+                    </p>
+                    <div class="group2" style="margin: 20px;">
+                        <iframe src="<%= ADRI5  %>" width="90%" height="600" allow="autoplay"></iframe> 
+                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="600px"></iframe> 
+                    </div>
                     <div class="form-group">
-                        <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#staticBackdrop2">
-                            ทดสอบโค้ด</button>
-                        <textarea class="form-control" style="height: 400px;" placeholder="วางโค้ดที่นี่" rows="4" cols="30" name="sendLink201" required></textarea>
-    
-                </div></div>
+                        <textarea class="form-control"  placeholder="วางโค้ดที่นี่" rows="10" cols="30" name="sendLink201" required></textarea>
+                    </div>
+                </div>
 
                 <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #687521;">
                     20.2 (Result) แสดงผลลัพธ์ที่ได้ ของข้อที่ 20.1 (1 คะแนน)</p>
-                    <textarea class="form-control" placeholder="คำตอบ" style="height: 100px;" rows="4" cols="30" name="expResult20" required></textarea>
+                    <textarea class="form-control" placeholder="คำตอบ"  rows="4" cols="30" name="expResult20" required></textarea>
                 <br>
                 <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #687521;">
                     20.3 (Improvement) ถ้าต้องการแสดงข้อมูลงานอดิเรก Hobby เพิ่มโดยใช้คำสั่ง fgets() ต้องเขียนโปรแกรมรับค่าตัวแปรอย่างไร และให้แสดงผลลัพธ์ที่ได้ (1 คะแนน) <br>
                     (พร้อมเขียนอธิบายสิ่งที่แก้ไขและผลลัพธ์) <br>
                     </p>
                     <div class="form-group">
-                        <textarea class="form-control" placeholder="คำตอบ" rows="4" cols="30" name="sendLink202" required></textarea>
+                        <textarea class="form-control" placeholder="คำตอบ" rows="10" cols="30" name="sendLink202" required></textarea>
     
                         </div>
                 <br><br>
