--- a/views/student/pretest/6_Loop_Statements-pretest.ejs
+++ b/views/student/pretest/6_Loop_Statements-pretest.ejs
@@ -536,22 +536,23 @@
                      <br>
 
                 <!-- ข้อ 16 -->
-                <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #363e62;">
-                    16.1 (Deployment) ให้เขียนโปรแกรมแสดงสูตรคูณ รับค่าของตัวแปร สร้างเงื่อนไขใช้คำสั่ง for และแสดงค่าของข้อมูลดังนี้ (3 คะแนน)
-                    <br></p>
-                <div class="group2"  style="margin: 20px;">
-                    <iframe src="<%= ADRI1  %> " width="90%" height="600" allow="autoplay"></iframe>
-                    <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="600px"></iframe>  
-                </div>    
-                <div class="form-group">
-                    <textarea class="form-control"  placeholder="วางโค้ดที่นี่" rows="10" cols="30" name="code" required></textarea>
+                <div style="background-color: #363e62;">
+                    <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #363e62;">
+                        16.1 (Deployment) ให้เขียนโปรแกรมแสดงสูตรคูณ รับค่าของตัวแปร สร้างเงื่อนไขใช้คำสั่ง for และแสดงค่าของข้อมูลดังนี้ (3 คะแนน)
+                        <br></p>
+                    <div class="group2"  style="margin: 20px;">
+                        <iframe src="<%= ADRI1  %> " width="90%" height="600" allow="autoplay"></iframe>
+                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="600px"></iframe>  
+                    </div>    
+                    <div class="form-group">
+                        <textarea class="form-control"  placeholder="วางโค้ดที่นี่" rows="10" cols="30" name="code" required></textarea>
+                    </div>
                 </div>
-                
                 
                 <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #363e62;">
                     16.2 (Result) แสดงผลลัพธ์ที่ได้ให้ครบทุกกรณีของข้อที่ 16.1 (1 คะแนน)
                 </p>
-                    <textarea class="form-control" placeholder="คำตอบ" style="height: 100px;" rows="4" cols="30" name="expResult16" required></textarea>
+                    <textarea class="form-control" placeholder="คำตอบ" rows="4" cols="30" name="expResult16" required></textarea>
                 <br>
                 <p type="text" class="list-group-item list-group-item-action"  style="color: white; background-color: #363e62;">
                     16.3 (Improvement) เพิ่มเติมโค้ดให้สามารถตรวจสอบค่าของตัวเลข number ที่ป้อนว่าเป็นจำนวนเต็มบวกหรือไม่ ถ้าไม่ใช่ให้แจ้งเตือนแสดงข้อความ "Please enter a positive integer." (1 คะแนน)
@@ -563,21 +564,22 @@
                 <br><br>
 
                 <!-- ข้อ 17 -->
-                <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #8c521f;">
-                    17.1 (Deployment) ให้เขียนโปรแกรมแสดงผลรวมของตัวเลขตามจำนวนที่กำหนด โดยให้รับค่าของตัวแปร สร้างเงื่อนไขใช้คำสั่ง while และแสดงค่าของข้อมูลดังนี้ <br>(3 คะแนน)
-                <br></p>
-                <div class="group2" style="margin: 20px;">
-                    <iframe src="<%= ADRI2  %>" width="90%" height="600" allow="autoplay"></iframe>                
-                    <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="600px"></iframe>  
+                <div style="background-color: #8c521f;">
+                    <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #8c521f;">
+                        17.1 (Deployment) ให้เขียนโปรแกรมแสดงผลรวมของตัวเลขตามจำนวนที่กำหนด โดยให้รับค่าของตัวแปร สร้างเงื่อนไขใช้คำสั่ง while และแสดงค่าของข้อมูลดังนี้ <br>(3 คะแนน)
+                    <br></p>
+                    <div class="group2" style="margin: 20px;">
+                        <iframe src="<%= ADRI2  %>" width="90%" height="600" allow="autoplay"></iframe>                
+                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="600px"></iframe>  
+                    </div>
+                    <div class="form-group">
+                        <textarea class="form-control"  placeholder="วางโค้ดที่นี่" rows="10" cols="30" name="sendLink171" required></textarea>
+                    </div>
                 </div>
-                <div class="form-group">
-                    <textarea class="form-control" style="height: 400px;" placeholder="วางโค้ดที่นี่" rows="4" cols="30" name="sendLink171" required></textarea>
-                </div>
-                
 
                 <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #8c521f;">
                     17.2 (Result) แสดงผลลัพธ์ที่ได้ให้ครบทุกกรณีของข้อที่ 17.1 (1 คะแนน)</p>
-                    <textarea class="form-control" placeholder="คำตอบ" style="height: 100px;" rows="4" cols="30" name="expResult17" required></textarea>
+                    <textarea class="form-control" placeholder="คำตอบ" rows="4" cols="30" name="expResult17" required></textarea>
                 <br>
                 <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #8c521f;">
                     17.3 (Improvement) ให้แก้ไขโค้ดนี้เปลี่ยนจากการใช้ while loop เป็น for loop แทน (1 คะแนน)
@@ -589,21 +591,23 @@
                 <br><br>
 
                 <!-- ข้อ 18 -->
-                <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #366241;">
-                    18.1 (Deployment) เขียนโปรแกรมท้ายตัวเลข 1-100 โดยให้รับค่าของตัวแปร สร้างเงื่อนไขใช้คำสั่ง do while และแสดงค่าของข้อมูลดังนี้ (3 คะแนน)
-                    <br>
-                </p>
-                <div class="group2 style="margin: 20px;">
-                    <iframe src="<%= ADRI3  %>" width="90%" height="600" allow="autoplay"></iframe>
-                    <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="600px"></iframe>  
-                </div>
-                    <div class="form-group">
-                    <textarea class="form-control" style="height: 400px;" placeholder="วางโค้ดที่นี่" rows="4" cols="30" name="sendLink181" required></textarea>
+                <div style="background-color: #366241;">
+                    <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #366241;">
+                        18.1 (Deployment) เขียนโปรแกรมท้ายตัวเลข 1-100 โดยให้รับค่าของตัวแปร สร้างเงื่อนไขใช้คำสั่ง do while และแสดงค่าของข้อมูลดังนี้ (3 คะแนน)
+                        <br>
+                    </p>
+                    <div class="group2" style="margin: 20px;">
+                        <iframe src="<%= ADRI3  %>" width="90%" height="600" allow="autoplay"></iframe>
+                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="600px"></iframe>  
+                    </div>
+                        <div class="form-group">
+                        <textarea class="form-control" placeholder="วางโค้ดที่นี่" rows="10" cols="30" name="sendLink181" required></textarea>
+                    </div>
                 </div>
 
                 <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #366241;">
                     18.2 (Result) แสดงผลลัพธ์ที่ได้ให้ครบทุกกรณีของข้อที่ 18.1 (1 คะแนน)</p>
-                    <textarea class="form-control" placeholder="คำตอบ" style="height: 100px;" rows="4" cols="30" name="expResult18" required></textarea>
+                    <textarea class="form-control" placeholder="คำตอบ"  rows="4" cols="30" name="expResult18" required></textarea>
                 <br>
                 <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #366241;">
                     18.3 (Improvement) แก้ไขเป็นใช้ while loop แทน (1 คะแนน) <br>
@@ -619,20 +623,22 @@
                 <br><br>
 
                 <!-- ข้อ 19 -->
-                <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #453662;">
-                    19.1 (Deployment) เขียนโปรแกรมสร้างรูปสามเหลี่ยม โดยรับค่าของตัวแปร สร้างเงื่อนไขใช้คำสั่ง Nested Loops (for ซ้อน for) และแสดงค่าของข้อมูลดังนี้ <br>(3 คะแนน)<br>
-                </p>
-                <div class="group2" style="margin: 20px;">
-                    <iframe src="<%= ADRI4  %>" width="90%" height="600" allow="autoplay"></iframe>
-                    <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="600px"></iframe>  
-                </div>    
-                <div class="form-group">
-                    <textarea class="form-control" style="height: 400px;" placeholder="วางโค้ดที่นี่" rows="4" cols="30" name="sendLink191" required></textarea>
+                <div style="background-color: #453662;">
+                    <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #453662;">
+                        19.1 (Deployment) เขียนโปรแกรมสร้างรูปสามเหลี่ยม โดยรับค่าของตัวแปร สร้างเงื่อนไขใช้คำสั่ง Nested Loops (for ซ้อน for) และแสดงค่าของข้อมูลดังนี้ <br>(3 คะแนน)<br>
+                    </p>
+                    <div class="group2" style="margin: 20px;">
+                        <iframe src="<%= ADRI4  %>" width="90%" height="600" allow="autoplay"></iframe>
+                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="600px"></iframe>  
+                    </div>    
+                    <div class="form-group">
+                        <textarea class="form-control" placeholder="วางโค้ดที่นี่" rows="4" cols="30" name="sendLink191" required></textarea>
+                    </div>
                 </div>
 
                 <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #453662;">
                     19.2 (Result) แสดงผลลัพธ์ที่ได้ให้ครบทุกกรณีของข้อที่ 19.1 (1 คะแนน)</p>
-                    <textarea class="form-control" placeholder="คำตอบ" style="height: 100px;" rows="4" cols="30" name="expResult19" required></textarea>
+                    <textarea class="form-control" placeholder="คำตอบ" rows="4" cols="30" name="expResult19" required></textarea>
                 <br>
                 <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #453662;">
                     19.3 (Improvement) อ้างอิงโค้ดเดิมให้เขียนโปรแกรมใหม่โดยให้สร้างเป็นรูปสี่เหลี่ยม (1 คะแนน)
@@ -644,20 +650,22 @@
                 <br><br>
 
                 <!-- ข้อ 20 -->
-                <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #687521;">
-                    20.1 (Deployment) เขียนโปรแกรมการคำนวณเกรดนักเรียน โดยให้รับค่าของตัวแปร สร้างเงื่อนไขวนลูป และแสดงค่าของข้อมูลดังนี้
-                    <br></p>
-                <div class="group2" style="margin: 20px;">
-                    <iframe src="<%= ADRI5  %>" width="90%" height="600" allow="autoplay"></iframe> 
-                    <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="600px"></iframe>  
-                </div>
-                <div class="form-group">
-                    <textarea class="form-control" style="height: 400px;" placeholder="วางโค้ดที่นี่" rows="4" cols="30" name="sendLink201" required></textarea>
+                <div style="background-color: #687521;">
+                    <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #687521;">
+                        20.1 (Deployment) เขียนโปรแกรมการคำนวณเกรดนักเรียน โดยให้รับค่าของตัวแปร สร้างเงื่อนไขวนลูป และแสดงค่าของข้อมูลดังนี้
+                        <br></p>
+                    <div class="group2" style="margin: 20px;">
+                        <iframe src="<%= ADRI5  %>" width="90%" height="600" allow="autoplay"></iframe> 
+                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="600px"></iframe>  
+                    </div>
+                    <div class="form-group">
+                        <textarea class="form-control" placeholder="วางโค้ดที่นี่" rows="10" cols="30" name="sendLink201" required></textarea>
+                    </div>
                 </div>
 
                 <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #687521;">
                     20.2 (Result) แสดงผลลัพธ์ที่ได้ให้ครบทุกกรณีของข้อที่ 20.1 (1 คะแนน)</p>
-                    <textarea class="form-control" placeholder="คำตอบ" style="height: 100px;" rows="4" cols="30" name="expResult20" required></textarea>
+                    <textarea class="form-control" placeholder="คำตอบ" rows="4" cols="30" name="expResult20" required></textarea>
                 <br>
                 <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #687521;">
                     20.3 (Improvement) แก้ไขโค้ดโดยเพิ่มเติมให้มีการตรวจสอบค่าคะแนนของ score ต้องอยู่ในช่วง 0 - 100 เท่านั้น ถ้าไม่ใช่ให้มีการแจ้งเตือนเป็นข้อความ "Please enter a score between 0 and 100. " (1 คะแนน)
